--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+    list-style: none;
+    font-family: "Permanent Marker", cursive;
+}
 
 /* Inicio header */
 header {
