--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Permanent+Marker&display=swap');
+
 
 * {
     margin: 0;
@@ -6,7 +7,8 @@
     box-sizing: border-box;
     text-decoration: none;
     list-style: none;
-    font-family: "Permanent Marker", cursive;
+    font-family: 'Lato';
+    font-weight: 700;
 }
 
 /* Inicio header */
@@ -23,18 +25,18 @@ header {
     width: auto;
 }
 
-nav {
+._navbar {
     flex: 1;
     display: flex;
     justify-content: center;
 }
 
-nav ul {
+._navbar ul {
     display: flex;
     gap: 1.25rem;
 }
 
-nav a {
+._navbar a {
     position: relative;
     text-decoration: none;
     color: black;
@@ -83,6 +85,7 @@ nav a {
 .hero h1 {
     font-size: 3rem;
     margin-bottom: 1.25rem;
+    font-weight: 700;
 }
 
 .hero p {
@@ -102,6 +105,7 @@ nav a {
     font-weight: bold;
     transition: background 0.3s ease;
     z-index: 1;
+    text-decoration: none;
 }
 
 .hero .btn-hero:hover {
@@ -140,11 +144,8 @@ nav a {
     border-radius: 15px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease;
-
     flex: 1 1 250px;
-    /* grow | shrink | basis */
     max-width: 350px;
-    /* evita que una tarjeta se estire demasiado */
 }
 
 .service-card:hover {
@@ -161,7 +162,6 @@ nav a {
 .service-card p {
     font-size: 1rem;
 }
-
 
 /* fin servicios */
 
@@ -210,7 +210,6 @@ nav a {
 .overlay {
     position: absolute;
     inset: 0;
-    /* shorthand para top, right, bottom, left = 0 */
     background: rgba(0, 0, 0, 0.6);
     color: #fff;
     display: flex;
